# server/routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\TimekeepingController;
 
 /*
 |--------------------------------------------------------------------------
@@ -26,8 +27,10 @@ Route::post('auth/login', [AuthController::class, 'login']);
 Route::post('auth/register', [AuthController::class, 'register']);
 Route::group(['middleware' => 'jwt.auth'], function(){
   Route::post('auth/logout', [AuthController::class, 'logout']);
-  
+  Route::post('checkin', [TimekeepingController::class, 'checkin']);
+  Route::post('checkout', [TimekeepingController::class, 'checkout']);
 });
+// Route::post('checkin', [TimekeepingController::class, 'checkin']);
 Route::group(['middleware' => 'jwt.refresh'], function(){
   Route::get('auth/refresh', [AuthController::class, 'refresh']);
 });
